Details
-
Bug
-
Resolution: Fixed
-
Major
Description
reactos-bootcd-0.4.15-dev-5357-g11a7141-x86-gcc-lin-dbg
- Open Registry in explorer
- Drag'n'drop registry item onto desktop
Shows "drag allowed" icon while it should show "drag forbidden"
Explorer CRASH when dropped

Cause : https://git.reactos.org/?p=reactos.git;a=blob;f=dll/shellext/ntobjshex/regfolder.cpp#l431
Address:
|
* <ntobjshex.dll:4297 (dll/shellext/ntobjshex/regfolder.cpp:429 (CRegistryFolder::GetInfoFromPidl))> (C:\ReactOS\System32\ntobjshex.dll@71bd0000) |
Frames:
|
* <ntobjshex.dll:c868 (dll/shellext/ntobjshex/foldercommon.h:509 (CCommonFolder<CRegistryFolder, RegPidlEntry, CRegistryFolderExtractIcon>::GetDisplayNameOf))> (C:\ReactOS\System32\ntobjshex.dll@71bd0000) |
* <shell32.dll:6ed32 (dll/win32/shell32/droptargets/CFSDropTarget.cpp:76 (CFSDropTarget::_CopyItems))> (C:\ReactOS\system32\shell32.dll@7ad60000) |
* <shell32.dll:70812 (dll/win32/shell32/droptargets/CFSDropTarget.cpp:676 (CFSDropTarget::_DoDrop))> (C:\ReactOS\system32\shell32.dll@7ad60000) |
* <shell32.dll:7105a (dll/win32/shell32/droptargets/CFSDropTarget.cpp:742 (CFSDropTarget::_DoDropThreadProc))> (C:\ReactOS\system32\shell32.dll@7ad60000) |
* <shlwapi.dll:23412 (dll/win32/shlwapi/thread.c:321 (SHLWAPI_ThreadWrapper))> (C:\ReactOS\system32\shlwapi.dll@7bfa0000) |
* <kernel32.dll:1c980 (dll/win32/kernel32/client/thread.c:71 (BaseThreadStartup))> (C:\ReactOS\system32\kernel32.dll@7c620000) |
Attachments
Issue Links
- relates to
-
CORE-18481 Explorer Crash when copying a NTObject Name Space item (from explorer's view) to the desktop
-
- Resolved
-